Prevented edit banner form fields from wrapping

--- a/src/pages/settings.css
+++ b/src/pages/settings.css
@@ -2,6 +2,11 @@
   margin-bottom: 6rem;
 }
 
+.edit-banner-form {
+  display: flex;
+  flex-direction: column;
+}
+
 .banner-fields {
   align-items: center;
   display: flex;
